--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mysql2": "^3.15.3",
     "socket.io": "^4.8.1"
